[package]
name = "scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
